# AvMod-V1

./: APIS.json  LICENSE.md  README.md  main.py  pyproject.toml
bot_config/: blacklist.json  prefixes.json
cogs/: _debug.py  _json.py  aviation.py  commands.py  fun.py  giveaway.py  help.py  image.py  topgg.py  utility.py
